tests/e2e/semantics/int_float_equality_comp.error
Error: syntax error in story at line 1, column 5

1|    a = 2 == 2.5
          ^^^^^^^^

E0124: Equality comparison not supported between `int` and `float`.
